--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Astha Bathla | Portfolio</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Astha Bathla | Portfolio</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body style="font-family: Arial; text-align: center; margin-top: 100px;">
-    <h1>Hello 👋, I'm Astha Bathla</h1>
+<body>
+  <section class="container">
+    <h1>Hello 👋, I'm <span>Astha Bathla</span></h1>
     <p>Welcome to my website hosted on GitHub Pages!</p>
     <p>This is where I’ll share my projects and updates.</p>
+  </section>
 </body>
 </html>
