--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Hello 👋, I'm <span>Astha Bathla</span></h1>
     <p>Welcome to my website hosted on GitHub Pages!</p>
     <p>This is where I’ll share my projects and updates.</p>
-    <a href="projects.html">View My Projects →</a>
+    <a href="project.html">View My Projects →</a>
   </section>
 </body>
 </html>
