--- a/project.html
+++ b/project.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <a href="index.html">🏠 Home</a> | <a href="projects.html">💼 Projects</a>
+    <a href="index.html">🏠 Home</a> | <a href="project.html">💼 Projects</a>
   </header>
 
   <main class="projects">
