Replace project details with Sql Project and Power BI

--- a/project.html
+++ b/project.html
@@ -14,12 +14,12 @@
   <main class="projects">
     <h1>My Projects</h1>
     <div class="project-card">
-      <h3>RedirectQR App</h3>
-      <p>Dynamic QR code platform for business campaigns and analytics.</p>
+      <h3>Sql Project</h3>
+      <p>.</p>
     </div>
     <div class="project-card">
-      <h3>SalesEdge</h3>
-      <p>Sales and Customer Management App built with Power Apps + Dataverse.</p>
+      <h3>Power BI</h3>
+      <p>Dashboards made with Power BI</p>
     </div>
   </main>
 </body>
