Fix typo in SQL project description

--- a/project.html
+++ b/project.html
@@ -15,7 +15,7 @@
     <h1>My Projects</h1>
     <div class="project-card">
       <h3>Sql Project</h3>
-      <p>Projects displaying sql knowlwdge</p>
+      <p>Projects displaying sql knowledge</p>
     </div>
     <div class="project-card">
       <h3>Power BI</h3>
